fix: fix overflow

--- a/components/Contact/contact.module.css
+++ b/components/Contact/contact.module.css
@@ -4,7 +4,6 @@
   margin: 0 auto;
   padding: 2rem 0;
   scroll-margin-top: 5rem;
-  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
