--- a/components/Hero/hero.module.css
+++ b/components/Hero/hero.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 90vh;
   width: 100%;
   gap: 3rem;
   text-align: center;
